# AI-Vector-DataBase-converstion-from-pdf

./: .gitignore  CMakeLists.txt  PDFVectorDB-3.3.0-win64.msi  README.md  build_msi.ps1  export_for_training.py  gemini_api.cpp  gemini_api.h  install_wix.ps1  list_models.py  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pdf_processor.cpp  pdf_processor.h  pdfium-win-x64.tgz  vector_store.cpp  vector_store.h  vectors.db
_CPack_Packages/win64/WIX/: License.rtf  PDFVectorDB-3.3.2-win64.wixpdb  PDFVectorDB-3.3.3-win64.wixpdb  PDFVectorDB-3.3.4-win64.wixpdb  PDFVectorDB-3.5.0-win64.wixpdb  PDFVectorDB-3.6.0-win64.wixpdb  cpack_variables.wxi  directories.wixobj  directories.wxs  features.wixobj  features.wxs  files.wixobj  files.wxs  main.wixobj
